--- a/src/app/_components/search/search.component.html
+++ b/src/app/_components/search/search.component.html
@@ -41,12 +41,12 @@
         </div>
       </form>
       <div class="responsive-table">
-        <div class="table-backgound">
-          <div class="row row-header">
-            <div class="col-3 name text-center">
+        <div class="table-backgound table">
+          <div class="row row-header d-flex flex-nowrap align-items-center">
+            <div class="col-sm-3 col name text-center">
               <span>Nome</span>
             </div>
-            <div class="col-1 filter-field text-center justify-content-center" (click)="orderByInstitute()">
+            <div class="col-sm-1 col filter-field text-center justify-content-center" (click)="orderByInstitute()">
               <span>Instituição</span>
               <div class="static-filter">
                 <span class="dds__icons dds__chevron-up" [ngClass]="{'arrow-highlight' : agencyOrder == 'ASC'}"></span>
@@ -54,7 +54,7 @@
                   [ngClass]="{'arrow-highlight' : agencyOrder == 'DESC'}"></span>
               </div>
             </div>
-            <div class="col-2 filter-field text-center justify-content-center" (click)="orderBySubmission()">
+            <div class="col-sm-2 col filter-field text-center justify-content-center" (click)="orderBySubmission()">
               <span>Início</span>
               <div class="static-filter">
                 <span class="dds__icons dds__chevron-up" [ngClass]="{'arrow-highlight' : submission == 'ASC'}"></span>
@@ -62,7 +62,7 @@
                   [ngClass]="{'arrow-highlight' : submission == 'DESC'}"></span>
               </div>
             </div>
-            <div class="col-1 filter-field text-center justify-content-center" (click)="orderByfinancingValue()">
+            <div class="col-sm-1 col filter-field text-center justify-content-center" (click)="orderByfinancingValue()">
               <span>Valor</span>
               <div class="static-filter">
                 <span class="dds__icons dds__chevron-up"
@@ -71,16 +71,16 @@
                   [ngClass]="{'arrow-highlight' : financingValue == 'DESC'}"></span>
               </div>
             </div>
-            <div class="col-1 text-center">
+            <div class="col-sm-1 col text-center">
               <span>Afinidade</span>
             </div>
-            <div class="col-2 text-center">
+            <div class="col-sm-2 col text-center">
               <span>Área</span>
             </div>
-            <div class="col-1 text-center">
+            <div class="col-sm-1 col text-center">
               <span>Salvar</span>
             </div>
-            <div class="col-1">
+            <div class="col-sm-1 col">
               &nbsp;
             </div>
           </div>
@@ -91,38 +91,38 @@
               </div>
               <div class="table-content2" *ngFor="let edital of editais;  let i = index">
                 <div class="table-content" (click)="select(i)" [ngClass]="{'dark_row': i % 2 !== 0}">
-                  <div class="row" [ngClass]="{'selected': i === selected} ">
-                    <div class="col-3 edital-name">
+                  <div class="row flex-nowrap" [ngClass]="{'selected': i === selected} ">
+                    <div class="col-sm-3 col edital-name">
                       <label class="dds__icons dds__server-rack-support"></label>
                       <div>
                         <span (click)="seeMore(edital.id)" data-toggle="tooltip" data-placement="bottom"
                           [title]="edital.title">{{ reduceTitle(edital.title) }}</span>
                       </div>
                     </div>
-                    <div class="col-1 agency text-center">
+                    <div class="col-sm-1 col agency text-center">
                       <span>{{ edital.agency }}</span>
                     </div>
-                    <div class="col-2 text-center">
+                    <div class="col-sm-2 col text-center">
                       <span>{{!edital.dt_submission ? 'Não encontrado' : edital.dt_submission |
                         date:'dd/MM/yyyy'}}</span>
                     </div>
-                    <div class="col-1 text-center">
+                    <div class="col-sm-1 col text-center">
                       <span>
                         {{!edital.nm_financing_value ? 'Não encontrado' : edital.ds_currency + ' ' + edital.nm_financing_value}}
                       </span>
                     </div>
-                    <div class="col-1 affinity-field">
+                    <div class="col-sm-1 col affinity-field">
                       <span>{{ edital.Afinidade ?? '10' }}</span>
                     </div>
-                    <div class="col-2 area-List">
+                    <div class="col-sm-2 col area-List">
                       <span *ngFor="let item of edital.areaList">{{ reduceArea(item) }}</span>
                     </div>
-                    <div class="col-1 favorite-check">
+                    <div class="col-sm-1 col favorite-check">
                       <!-- <span class="material-symbols-outlined">bookmark</span> -->
                       <i class="bi ms-5" [class.bi-bookmark]="!edital.saved" [class.bi-bookmark-fill]="edital.saved"
                         [class.text-warning]="edital.saved" (click)="bookmarkEdital(edital)"></i>
                     </div>
-                    <div class="col-1">
+                    <div class="col-sm-1 col">
                       <button class="toggle-objectives closed" [id]="'toggle-' + i"
                         (click)="toggleDetails(i)">⌵</button>
                     </div>
