--- a/src/app/_components/search/search.component.scss
+++ b/src/app/_components/search/search.component.scss
@@ -268,6 +268,7 @@
 .table-backgound {
     background-color: white;
     border-radius: 20px;
+    width: fit-content;
     /* width: 95rem; */
 
     div.row-header {
@@ -312,6 +313,23 @@
     justify-content: flex-start !important;
     padding-left: 1px;
 }
+
+@media (max-width: 600px) {
+    .header{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .search-bar{
+        width: 100%;
+        max-width: 100%;
+    }
+    .filter{
+        display: flex;
+        justify-content: end;
+    }
+}
+
 @media (min-height: 600px) {
     .table-scroller {
         height: 19rem;
